--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,17 @@
 
   <name>diagnostic-service</name>
 
+  <properties>
+    <mockito.junit.jupiter.version>5.14.2</mockito.junit.jupiter.version>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
 </project>
